Fixing a vertical spacing issue with the tab labels.

--- a/synchro/scss/gold/susan/gold_susan.scss
+++ b/synchro/scss/gold/susan/gold_susan.scss
@@ -695,7 +695,6 @@ svg.external {
   transition: color ease-in-out 0.4s;
 
   h6 {
-    display: inline-block;
     padding: pxToRem(24) 0 pxToRem(34);
   }
 
